--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,8 @@
   },
   "require": {
     "dsawardekar/encase-php": "~0.2.0",
-    "dsawardekar/arrow": "dev-develop",
-    "dsawardekar/imgur-api": "dev-develop"
+    "dsawardekar/arrow": "~1.2.0",
+    "dsawardekar/imgur-api": "~0.4.0"
   },
   "autoload": {
     "psr-4": {
