--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "require-dev": {
-    "phpunit/phpunit": "~3.7"
+    "phpunit/phpunit": "~3.7",
+    "satooshi/php-coveralls": "~0.6.0"
   },
   "require": {
     "dsawardekar/encase-php": "~0.2.0",
