Keeps travis in the dist branch.
* The updated travis.yml ensures that dist is ignored instead.

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,10 @@ env:
   - WP_VERSION=latest WP_MULTISITE=0
   - WP_VERSION=3.9 WP_MULTISITE=0
 
+branches:
+  except:
+    - /^dist-.*$/
+
 install:
   - composer install
 
