--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ php:
 env:
   - WP_VERSION=latest WP_MULTISITE=0
   - WP_VERSION=3.9 WP_MULTISITE=0
+  - WP_VERSION=latest WP_MULTISITE=1
+  - WP_VERSION=3.9 WP_MULTISITE=1
 
 branches:
   except:
