Updates .gitignore [ci-skip]

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,26 @@
 *.swp
 *.swo
-tmp
-vendor
-build
+*.lock
+*.rst
+*.md
+.scrutinizer.yml
+.editorconfig
 wp-cli*.yml
-bower_components
-node_modules
-test/WpImgur/CreditsTest.php
-.coveralls.yml
-clover.xml
+tmp/
+build/
+bower_components/
+.git/
+tests/
+Tests/
+test/
+Test/
+dist/
+doc/
+ext/
+phpunit/
+composer.json
+portkey.json
+phpunit.xml
+phpunit*
+bin/
+examples/
