--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "require-dev": {
     "phpunit/phpunit": "~3.7",
-    "satooshi/php-coveralls": "~0.6.0"
+    "satooshi/php-coveralls": "^1.0"
   },
   "require": {
     "dsawardekar/arrow": "~1.8.0",
